force-app/main/default/objects/Venue_Event__c/Venue_Event__c.object-meta.xml
<CustomObject>
    <description>Represents an event scheduled to take place at a venue.</description>
    <label>Venue Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Venue Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>