force-app/main/default/objects/Venue_Event__c/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <label>Venue</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Venue__c</referenceTo>
    <relationshipLabel>Venue Events</relationshipLabel>
    <relationshipName>Venue_Events</relationshipName>
    <type>Lookup</type>
</CustomField>