force-app/main/default/objects/Venue_Event__c/validationRules/Tickets_Not_Exceed_Capacity.validationRule-meta.xml
<ValidationRule>
    <fullName>Tickets_Not_Exceed_Capacity</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Venue__c)),
    NOT(ISBLANK(Tickets_Sold__c)),
    Tickets_Sold__c &gt; Venue__r.Capacity__c
)</errorConditionFormula>
    <errorMessage>Tickets Sold cannot exceed the venue&apos;s capacity.</errorMessage>
</ValidationRule>